  * [AgentS] Added *constant: prefix to do not proccess the value
    with RSRParsers
  * [AgentS] Added DynamicDataProvider to AgentRequest
  * [Server] Corectly log the server listen error
  * [ERs] Added support to reference CSV fields by the column name
  * [ERs] Renamed *default reader folders
  * [FilterS] Updated Filter indexes
  * [General] Added *mo+extraDuration time support (e.g. *mo+1h will be time.Now() + 1 month + 1 hour)
  * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
  * [SessionS] Add SessionTLLLastUsage as option for an extra debit in case of ttl mechanism
  * [LoaderS] Add *req as mandatory prefix
  * [AgentS] Rename prefix from *cache to *uch
  * [InternalDB] Updated InternalDB to use the global cache
  * [RSRParsers] Removed *constant: prefix  
  * [RSRParsers] Removed attribute sistem from RSRParser  
  * [RSRParsers] Added grave accent(`) char as a delimiter to not split tge RSR value
  * [RSRParsers] Moved RSRFilter from RSRParsers to the *rsr FilterS

 -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100